# Just_ML

./: README.md  pyproject.toml
LLM/: predict.py  train.csv  train_sentiment.py
perceptron/: src.py
