[tool.poetry]
name = "just-ml"
version = "0.1.0"
description = ""
authors = ["recently_was_good <ustinovlev039@gmail.com>"]
readme = "README.md"
packages = [{include = "just_ml"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
